feat: add nutrition programs section

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,4 +8,7 @@ $tablet-nav: 760px;
 $tablet-md: 768px;
 $tablet-lg: 992px;
 
+$desktop-xxs: 1028px;
+$desktop-xs: 1110px;
 $desktop-sm: 1200px;
+$desktop-md: 1260px;
