--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,9 @@
   --color-white-30: #ffffff30;
   --color-green: #68b738;
   --color-green-2: #5eaa2f;
+  --color-grey: #f2f2f2;
+  --color-dark-grey: #444444;
+  --color-light-grey: #d9d9d9;
 }
 
 html {
@@ -81,6 +84,8 @@ body {
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .container {
