--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
 @use "global.scss";
 @use "./components/header.scss";
-@use "./components/hero.scss";
+@use "./components/home/hero.scss";
+@use "./components/home/nutrition-programs.scss";
