feat: add steps section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,4 @@
 @use "./components/header.scss";
 @use "./components/home/hero.scss";
 @use "./components/home/nutrition-programs.scss";
+@use "./components/home/steps.scss";
