--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,6 +17,7 @@
   --color-grey: #f2f2f2;
   --color-dark-grey: #444444;
   --color-light-grey: #d9d9d9;
+  --color-grey-border: #e6e6e6;
 }
 
 html {
