--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
   --color-grey: #f2f2f2;
   --color-dark-grey: #444444;
   --color-light-grey: #d9d9d9;
+  --color-grey-border: #e6e6e6;
 }
 
 html {
@@ -623,6 +624,76 @@ body {
     width: 67px;
     height: 50px;
   }
+}
+
+.steps {
+  border-bottom: 1px solid var(--color-grey-border);
+}
+.steps .title {
+  margin-bottom: 32px;
+  font-family: "Oswald";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-size: 60px;
+  line-height: 60px;
+  text-align: left;
+}
+.steps .list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: start;
+  column-gap: 70px;
+  row-gap: 37px;
+}
+@media (max-width: 1260px) {
+  .steps .list {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 137px;
+  }
+}
+.steps .item {
+  position: relative;
+  min-height: 280px;
+  padding-top: 40px;
+}
+.steps .icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 31px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--color-green);
+}
+.steps .icon--leaf {
+  background-image: url("/assets/images/icon_leaf.svg");
+}
+.steps .icon--tub {
+  background-image: url("/assets/images/icon_tub.svg");
+}
+.steps .icon--eat {
+  background-image: url("/assets/images/icon_eat.svg");
+}
+.steps .icon--alarm {
+  background-image: url("/assets/images/icon_alarm.svg");
+}
+.steps .step {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  font-family: "Oswald";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-size: 280px;
+  line-height: 280px;
+  color: var(--color-grey);
+}
+.steps .description {
+  text-align: left;
 }
 
 /*# sourceMappingURL=styles.css.map */
