--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @use "./components/home/hero.scss";
 @use "./components/home/nutrition-programs.scss";
 @use "./components/home/steps.scss";
+@use "./components/home/results.scss";
