--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $mobile-md: 420px;
 $mobile-lg: 480px;
 
 $tablet-sm: 576px;
+$tablet-slider: 678px;
 $tablet-nav: 760px;
 $tablet-md: 768px;
 $tablet-lg: 992px;
