--- a/src/styles/components/home/steps.scss
+++ b/src/styles/components/home/steps.scss
@@ -2,7 +2,9 @@
 @use "../../mixin";
 
 .steps {
-  border-bottom: 1px solid var(--color-grey-border);
+  @media (max-width: variables.$desktop-md) {
+    border-bottom: 1px solid var(--color-grey-border);
+  }
 
   .title {
     margin-bottom: 32px;
