--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,10 @@
   --color-dark-grey: #444444;
   --color-light-grey: #d9d9d9;
   --color-grey-border: #e6e6e6;
+  --color-grey-background: #eaeaea;
+  --color-special-grey: #cdcdcd;
+  --color-grey-track: #dcdcdc;
+  --color-grey-background-tablet: #eaeaea;
 }
 
 html {
@@ -80,9 +84,12 @@ input {
 
 body {
   position: relative;
+  overflow-x: hidden;
+
   max-width: 1440px;
   min-width: 320px;
   margin: 0 auto;
+
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 16px;
