--- a/src/styles/components/home/steps.scss
+++ b/src/styles/components/home/steps.scss
@@ -13,6 +13,11 @@
     font-size: 60px;
     line-height: 60px;
     text-align: left;
+
+    @media (max-width: variables.$tablet-sm) {
+      font-size: 36px;
+      line-height: 40px;
+    }
   }
 
   .list {
@@ -26,22 +31,40 @@
       grid-template-columns: repeat(2, 1fr);
       column-gap: 137px;
     }
+
+    @media (max-width: variables.$tablet-sm) {
+      grid-template-columns: 1fr;
+      row-gap: 20px;
+      margin-bottom: 30px;
+    }
   }
 
   .item {
     position: relative;
     min-height: 280px;
     padding-top: 40px;
+
+    @media (max-width: variables.$tablet-sm) {
+      display: flex;
+      gap: 20px;
+      min-height: 60px;
+      padding-top: 0;
+    }
   }
 
   .icon {
     width: 80px;
     height: 80px;
     margin-bottom: 31px;
+    flex-shrink: 0;
 
     background-repeat: no-repeat;
     background-position: center;
     background-color: var(--color-green);
+
+    @media (max-width: variables.$tablet-sm) {
+      margin-bottom: 0;
+    }
 
     &--leaf {
       background-image: url("/assets/images/icon_leaf.svg");
@@ -70,6 +93,10 @@
     font-size: 280px;
     line-height: 280px;
     color: var(--color-grey);
+
+    @media (max-width: variables.$tablet-sm) {
+      display: none;
+    }
   }
 
   .description {
