--- a/styles.css
+++ b/styles.css
@@ -702,6 +702,8 @@ body {
 }
 @media (max-width: 576px) {
   .steps .icon {
+    width: 60px;
+    height: 60px;
     margin-bottom: 0;
   }
 }
@@ -738,6 +740,13 @@ body {
 }
 .steps .description {
   text-align: left;
+  color: var(--color-dark-grey);
+}
+@media (max-width: 576px) {
+  .steps .description {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 .results-slider {
