--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,22 +1,16 @@
-@use "../variables";
-@use "../mixin";
+@use '../variables';
+@use '../mixin';
 
 .header {
   position: absolute;
+  z-index: 100;
   top: 0;
   left: 0;
-  z-index: 100;
-
   width: 100%;
-
-  @media (max-width: variables.$desktop-sm) {
-    position: relative;
-  }
 
   .logo {
     &-link {
       display: block;
-
       outline: transparent;
       transition: opacity 0.3s ease-in-out;
 
@@ -34,28 +28,20 @@
   &-wrapper {
     display: flex;
     gap: 1rem;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
   }
 
   .nav {
     display: flex;
     gap: 1rem;
 
-    @media (max-width: variables.$tablet-nav) {
-      display: none;
-    }
-
     &-link {
       padding: 0.5rem 0;
       border-bottom: 2px solid transparent;
-
       color: var(--color-white);
-
       outline: transparent;
       transition: opacity 0.3s ease-in-out;
-
-      @include mixin.font-oswald;
 
       &:hover,
       &:focus {
@@ -66,10 +52,6 @@
         opacity: 0.3;
       }
 
-      @media (max-width: variables.$desktop-sm) {
-        color: var(--color-black);
-      }
-
       &.active {
         border-bottom: 2px solid var(--color-white);
 
@@ -77,28 +59,40 @@
           border-bottom: 2px solid var(--color-green);
         }
       }
+
+      @media (max-width: variables.$desktop-sm) {
+        color: var(--color-black);
+      }
+
+      @include mixin.font-oswald;
+    }
+
+    @media (max-width: variables.$tablet-nav) {
+      display: none;
     }
   }
 
   .burger {
     display: none;
 
-    @media (max-width: variables.$tablet-nav) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 5px;
-
-      width: 30px;
-      height: 30px;
-    }
-
     &-line {
       width: 24px;
       height: 1.5px;
-
       background-color: var(--color-black);
     }
+
+    @media (max-width: variables.$tablet-nav) {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      align-items: center;
+      justify-content: center;
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  @media (max-width: variables.$desktop-sm) {
+    position: relative;
   }
 }
