--- a/src/styles/components/home/results.scss
+++ b/src/styles/components/home/results.scss
@@ -1,6 +1,6 @@
-@use "../../variables";
-@use "../../mixin";
-@use "./slider.scss";
+@use '../../variables';
+@use '../../mixin';
+@use './slider';
 
 .results {
   position: relative;
@@ -8,9 +8,8 @@
   &-content {
     @media (max-width: variables.$desktop-md) {
       display: flex;
-      justify-content: space-between;
       gap: 30px;
-
+      justify-content: space-between;
       width: 100%;
     }
 
@@ -22,24 +21,16 @@
     @media (max-width: variables.$tablet-sm) {
       gap: 0;
     }
-
-    &-wrapper {
-      @media (max-width: variables.$desktop-md) {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-    }
   }
 
   .title {
     width: 100%;
     margin-bottom: 146px;
-
-    @include mixin.font-oswald;
     font-size: 60px;
     line-height: 60px;
     text-align: left;
+
+    @include mixin.font-oswald;
 
     @media (max-width: variables.$desktop-md) {
       margin-bottom: 63px;
@@ -47,7 +38,6 @@
 
     @media (max-width: variables.$tablet-sm) {
       margin-bottom: 33px;
-
       font-size: 36px;
       line-height: 40px;
     }
@@ -56,7 +46,6 @@
   .description {
     max-width: 440px;
     margin-bottom: 70px;
-
     text-align: left;
 
     @media (max-width: variables.$desktop-md) {
@@ -69,7 +58,6 @@
 
     @media (max-width: variables.$tablet-sm) {
       margin-bottom: 25px;
-
       font-size: 14px;
       line-height: 18px;
     }
@@ -86,9 +74,9 @@
 
     @media (max-width: variables.$tablet-md) {
       flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
       gap: 30px;
+      align-items: center;
+      justify-content: space-between;
     }
 
     @media (max-width: variables.$tablet-nav) {
@@ -102,8 +90,8 @@
     gap: 42px;
 
     @media (max-width: variables.$tablet-sm) {
-      justify-content: space-between;
       gap: 10px;
+      justify-content: space-between;
     }
   }
 
@@ -114,13 +102,9 @@
     border: 1px solid var(--color-special-grey);
     border-radius: 3px;
 
-    @media (max-width: variables.$tablet-sm) {
-      min-width: 124px;
-      padding: 14px;
-    }
-
     .value {
       @include mixin.font-oswald;
+
       font-size: 30px;
       line-height: 37px;
 
@@ -133,36 +117,11 @@
     .label {
       position: absolute;
       bottom: -12px;
-
       padding: 5px;
-
       font-size: 14px;
       line-height: 14px;
-      text-wrap-mode: nowrap;
-
       background-color: var(--color-grey);
-
-      @media (max-width: variables.$desktop-md) {
-        background-color: var(--color-white);
-      }
-
-      @media (max-width: variables.$tablet-slider) {
-        background-color: var(--color-grey-background-tablet);
-      }
-
-      @media (max-width: variables.$tablet-slider) {
-        color: var(--color-dark-grey);
-      }
-
-      @media (max-width: variables.$tablet-sm) {
-        width: 90px;
-        bottom: -22px;
-        padding-left: 15px;
-        padding-right: 15px;
-
-        font-size: 12px;
-        line-height: 12px;
-      }
+      text-wrap-mode: nowrap;
 
       &--first {
         left: 26px;
@@ -189,6 +148,32 @@
           left: 15px;
         }
       }
+
+      @media (max-width: variables.$desktop-md) {
+        background-color: var(--color-white);
+      }
+
+      @media (max-width: variables.$tablet-slider) {
+        background-color: var(--color-grey-background-tablet);
+      }
+
+      @media (max-width: variables.$tablet-slider) {
+        color: var(--color-dark-grey);
+      }
+
+      @media (max-width: variables.$tablet-sm) {
+        bottom: -22px;
+        width: 90px;
+        padding-right: 15px;
+        padding-left: 15px;
+        font-size: 12px;
+        line-height: 12px;
+      }
+    }
+
+    @media (max-width: variables.$tablet-sm) {
+      min-width: 124px;
+      padding: 14px;
     }
   }
 
@@ -200,8 +185,8 @@
 
     @media (max-width: variables.$tablet-md) {
       flex-direction: column;
-      align-items: flex-end;
       gap: 9px;
+      align-items: flex-end;
     }
 
     @media (max-width: variables.$tablet-nav) {
@@ -216,13 +201,11 @@
 
   &-background--before {
     position: absolute;
-    left: 0;
-    top: 30%;
     z-index: -5;
-
+    top: 30%;
+    left: 0;
     width: 100%;
     height: 70%;
-
     background-color: var(--color-grey);
 
     @media (max-width: variables.$desktop-md) {
@@ -239,17 +222,21 @@
 
   &-background--after {
     position: absolute;
-    right: 0;
-    top: 30%;
     z-index: -4;
-
+    top: 30%;
+    right: 0;
     width: 387px;
     height: 70%;
-
     background-color: var(--color-grey-background);
 
     @media (max-width: variables.$desktop-md) {
       display: none;
     }
+  }
+
+  @media (max-width: variables.$desktop-md) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
