--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,7 @@
   --color-green: #68b738;
   --color-green-2: #5eaa2f;
   --color-grey: #f2f2f2;
+  --color-grey-2: #666;
   --color-dark-grey: #444;
   --color-light-grey: #d9d9d9;
   --color-grey-border: #e6e6e6;
@@ -96,4 +97,8 @@ body {
 
 .container {
   @include mixin.container;
+}
+
+.separator {
+  display: none;
 }
