--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,4 @@
 @use './components/home/nutrition-programs';
 @use './components/home/steps';
 @use './components/home/results';
+@use './components/footer';
