--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -100,5 +100,9 @@ body {
 }
 
 .separator {
-  display: none;
+  width: 100%;
+  height: 1px;
+  margin: 20px 0;
+  border: none;
+  background-color: var(--color-light-grey);
 }
