feat: add map section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,5 @@
 @use './components/home/nutrition-programs';
 @use './components/home/steps';
 @use './components/home/results';
+@use './components/map';
 @use './components/footer';
