feat: implement SPA routing

--- a/src/styles/components/home/slider.scss
+++ b/src/styles/components/home/slider.scss
@@ -1,7 +1,7 @@
 @use '../../variables';
 @use '../../mixin';
 
-.results-slider {
+.home-page .results-slider {
   position: absolute;
   top: 0;
   right: 60px;
