--- a/src/styles/components/home/nutrition-programs.scss
+++ b/src/styles/components/home/nutrition-programs.scss
@@ -1,7 +1,7 @@
 @use '../../variables';
 @use '../../mixin';
 
-.nutrition-programs {
+.home-page .nutrition-programs {
   .list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
