--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,5 @@
 @use 'global';
 @use './components/header';
-@use './components/home/hero';
-@use './components/home/nutrition-programs';
-@use './components/home/steps';
-@use './components/home/results';
 @use './components/map';
 @use './components/footer';
+@use './components/home';
